--- a/templates/checkin.html
+++ b/templates/checkin.html
@@ -6,9 +6,13 @@
         <link rel="stylesheet" href="/static/amaze/css/amazeui.min.css">
     <link rel="stylesheet" href="/static/css/css.css">
 </head>
-<body>
+<body class="checkinbg">
 
 </body>
+
 <script src="/static/js/jquery-3.3.1.min.js"></script>
 <script src="/static/amaze/js/amazeui.min.js"></script>
+<script>
+
+</script>
 </html>
