--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/static/amaze/css/amazeui.min.css">
     <link rel="stylesheet" href="/static/css/css.css">
 </head>
-<body>
+<body class="loginbg">
 <div class="am-g">
     <div class="am-text-center login-title">
         <h1>登录界面</h1>
