--- a/static/css/webuploader.css
+++ b/static/css/webuploader.css
@@ -16,6 +16,7 @@
 	text-align: center;
 	border-radius: 3px;
 	overflow: hidden;
+	font-size: xx-large;
 }
 .webuploader-pick-hover {
 	background: #00a2d4;
