--- a/templates/pics.html
+++ b/templates/pics.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>WebUploader演示</title>
+    <title>打卡上传</title>
     <link rel="stylesheet" type="text/css" href="/static/css/webuploader.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
 </head>
@@ -15,7 +15,7 @@
                 <div class="queueList">
                     <div id="dndArea" class="placeholder">
                         <div id="filePicker"></div>
-                        <p>或将照片拖到这里，单次最多可选300张</p>
+                        <p class="fontlg">选择要提交的图片，单次最多可选5张</p>
                     </div>
                 </div>
                 <div class="statusBar" style="display:none;">
@@ -24,7 +24,7 @@
                         <span class="percentage"></span>
                     </div><div class="info"></div>
                     <div class="btns">
-                        <div id="filePicker2"></div><div class="uploadBtn">开始上传</div>
+                        <div id="filePicker2"></div><div class="uploadBtn fontlg">开始上传</div>
                     </div>
                 </div>
             </div>
