--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
-    <title>Title</title>
+    <title>津卫青年</title>
     <link rel="stylesheet" href="/static/amaze/css/amazeui.min.css">
     <link rel="stylesheet" href="/static/css/css.css">
 </head>
@@ -14,7 +14,7 @@
         <h1>登录界面</h1>
     </div>
     <form action="/login/" method="post" class="am-form" id="am-form">
-        <input type="text" name="no" class="am-input-lg am-round login-text am-center" placeholder="警员编号">
+        <input type="text" name="shouji" class="am-input-lg am-round login-text am-center" placeholder="电话号码">
 
         <input type="text" name="password" class="am-input-lg am-round login-password login-text am-center" placeholder="登录密码">
 
