--- a/templates/checkin.html
+++ b/templates/checkin.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" id="tree">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+
+    <title>津卫青年</title>
         <link rel="stylesheet" href="/static/amaze/css/amazeui.min.css">
     <link rel="stylesheet" href="/static/css/css.css">
 
 </head>
-<body class="checkinbg">
-<div style="width: 300px; height: 200px; background-color: #0a628f;
-position: absolute; top: 1100pt; left: 30%"></div>
+<body>
+<div class="am-container"  id="tree" style="padding: 0px; margin: 0px">
+    <div class="am-u-sm-12" style="padding: 0px; margin: 0px">
+        <img src="/static/imgs/bgtree.jpg" alt="" class="am-img-responsive">
+        <div style="width: 30rem; height: 20rem;  position: absolute;
+left:23rem; top:80rem"></div>
+    </div>
+
+</div>
 </body>
 
 <script src="/static/js/jquery-3.3.1.min.js"></script>
