--- a/static/css/style.css
+++ b/static/css/style.css
@@ -80,11 +80,11 @@ table {
 }
 
 #uploader .placeholder {
-    border: 3px dashed #e6e6e6;
+    /*border: 3px dashed #e6e6e6;*/
     min-height: 238px;
     padding-top: 158px;
     text-align: center;
-    background: url(../imgs/image.png) center 93px no-repeat;
+    /*background: url(../imgs/image.png) center 93px no-repeat;*/
     color: #cccccc;
     font-size: 18px;
     position: relative;
