--- a/templates/checkin.html
+++ b/templates/checkin.html
@@ -11,7 +11,7 @@
 <body>
 <div class="am-container"  id="tree" style="padding: 0px; margin: 0px">
     <div class="am-u-sm-12" style="padding: 0px; margin: 0px">
-        <img src="/static/imgs/bgtree.jpg" alt="" class="am-img-responsive">
+        <img src="/static/imgs/bgtree.png" alt="" class="am-img-responsive">
         <div style="width: 30rem; height: 20rem;  position: absolute;
 left:23rem; top:80rem"></div>
     </div>
