--- a/templates/upload.html
+++ b/templates/upload.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>打卡上传</title>
     <link rel="stylesheet" href="/static/amaze/css/amazeui.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/webuploader.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
