--- a/templates/vote-list.html
+++ b/templates/vote-list.html
@@ -23,7 +23,12 @@
                 <td>{{ item.username }}</td>
                 <td>{{ item.danwei }}</td>
 
-                <td><img src="/{{ item.path }}" alt="" class="am-img-thumbnail"></td>
+                <td>
+                    <div class="am-text-center">
+                        <img src="/{{ item.path }}" alt="" style="height: 100px">
+                    </div>
+
+                </td>
                 <td>{{ item.bref }}</td>
                 <td>{{ item.date }} </td>
             </tr>
@@ -32,8 +37,8 @@
 
 
     <ul class="am-pagination am-pagination-centered">
-        {% if posts.has_previous %}
-            <li class="am-active"><a href="/voteList?page={{ posts.previous_page_number }}">&laquo;</a></li>
+        {% if has_pre %}
+            <li class="am-active"><a href="/voteList?page={{ pre_page  }}">&laquo;</a></li>
             {% else %}
             <li class="am-disabled"><a href="#">&laquo;</a></li>
         {% endif %}
@@ -44,8 +49,8 @@
             <li class="am-active"><a href="/voteList/?page={{ page }}">{{ page }}</a></li>
         {% endfor %}
 
-        {% if posts.has_next %}
-            <li class="am-active"><a href="/voteList?page={{ posts.next_page_number }}">&raquo;</a></li>
+        {% if has_next %}
+            <li class="am-active"><a href="/voteList?page={{ next_page }}">&raquo;</a></li>
             {% else %}
             <li class="am-disabled"><a href="#">&raquo;</a></li>
         {% endif %}
