--- a/templates/vote-list.html
+++ b/templates/vote-list.html
@@ -8,7 +8,7 @@
 <body>
 <div class="am-g">
     <p class="am-header">提交列表 </p>
-    <p><button class="am-btn am-btn-success">下载</button></p>
+    <p><a href="/exportAllExcel"><button class="am-btn am-btn-success">下载</button></a></p>
     <table class="am-table am-table-bordered am-table-striped am-table-compact am-text-sm">
         <thead>
         <th>编号</th>
